add arg mapping to variant mapper